--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
