--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://tuanaht2001:tuanaht2001@database.325kfju.mongodb.net/dbftshop?retryWrites=true&w=majority
 JWT_SECRET= goK!pusp6ThEdURUtRenOwUhAsWUCLheBazl!uJLPlS8EbreWLdrupIwabRAsiBu
+MAIL_ID=taikhoanrac14789@gmail.com
+MP=thehelmht2002
