--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
